--- a/docker-spring-mvc/Dockerfile
+++ b/docker-spring-mvc/Dockerfile
@@ -32,4 +32,5 @@ rm -rf /opt/tomcat/webapps/ROOT
 ADD . /usr/local/docker-spring-mvc
 RUN cd /usr/local/docker-spring-mvc && mvn clean install
 RUN cp /usr/local/docker-spring-mvc/target/docker-spring-mvc.war /opt/tomcat/webapps/docker-spring-mvc.war
-RUN cd /opt/tomcat/bin && ./startup.sh
+RUN cd /opt/tomcat/bin 
+CMD ./startup.sh
